<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nome"
        app:layout_constraintEnd_toEndOf="@+id/tvRa"
        app:layout_constraintStart_toEndOf="@+id/tvRa"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/ra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNome" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="237dp"
        android:text="@string/btnCalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgTipoProfessor" />

    <RadioGroup
        android:id="@+id/rgTipoProfessor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="215dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etTempo"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbHorista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbHorista" />

        <RadioButton
            android:id="@+id/rbTitular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbTitular" />
    </RadioGroup>

    <EditText
        android:id="@+id/etValor"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/etValorHora"
        android:inputType="numberSigned"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rgTipoProfessor" />

    <EditText
        android:id="@+id/etTempo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/etHoraAula"
        android:inputType="numberSigned"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toStartOf="@+id/rgTipoProfessor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="71dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>